Prevent large images from extending off screen

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -188,6 +188,9 @@
     font-size: 18px;
             }
         }
+    img {
+        max-width: 100%;
+        }
     }
     .post-meta {
     font-size: $small-font-size;
